@@ -40,6 +40,9 @@ The ``crash`` binary supports several command line arguments.
 |                                       | overlay for suggestions.                         |
 |                                       | Disabling autocomplete removes this limitation.  |
 +---------------------------------------+--------------------------------------------------+
+| ``-C`` , ``--no-autocapitalize``      | Disable automatic capitalization of SQL keywords |
+|                                       | while typing.                                    |
++---------------------------------------+--------------------------------------------------+
 
 Example Usage
 =============
@@ -97,6 +100,8 @@ You can get a list of commands by typing ``\?``:
 | ``\sysinfo``         | Query the ``sys`` tables for system and cluster information                        |
 +----------------------+------------------------------------------------------------------------------------+
 | ``\autocomplete``    | Turn autocomplete feature on or off. Works as a toggle.                            |
++----------------------+------------------------------------------------------------------------------------+
+| ``\autocapitalize``  | Turn automatic capitalization for SQL keywords or off. Works as a toggle.          |
 +----------------------+------------------------------------------------------------------------------------+
 
 ===============
