@@ -18,22 +18,70 @@
 # software solely pursuant to the terms of the relevant commercial agreement.
 
 from unittest import TestCase
-from .repl import SQLCompleter
+from prompt_toolkit.buffer import Buffer
+from prompt_toolkit.document import Document
+from .repl import SQLCompleter, Capitalizer
 from .command import CrateCmd
 
 
 class SQLCompleterTest(TestCase):
+
     def setUp(self):
-        self.cmd = CrateCmd()
-        self.completer = SQLCompleter(self.cmd)
+        cmd = CrateCmd()
+        self.completer = SQLCompleter(cmd)
 
     def test_get_builtin_command_completions(self):
-        c = self.completer
-        result = sorted(list(c.get_command_completions('\\c')))
+        result = sorted(list(self.completer.get_command_completions('\\c')))
         self.assertEqual(result, ['c', 'check', 'connect'])
 
     def test_get_command_completions_format(self):
-        cmd = CrateCmd()
-        completer = SQLCompleter(cmd)
-        result = list(completer.get_command_completions(r'\format dyn'))
+        result = list(self.completer.get_command_completions(r'\format dyn'))
         self.assertEqual(result, ['dynamic'])
+
+
+class AutoCapitalizeTest(TestCase):
+
+    def setUp(self):
+        cmd = CrateCmd()
+        self.capitalizer = Capitalizer(cmd)
+
+    def test_capitalize(self):
+        buffer = Buffer()
+
+        text = u'selec'
+        buffer.set_document(Document(text, len(text)))
+        self.capitalizer(buffer)
+        self.assertEqual(u'selec', buffer.text)
+
+        text = u'select'
+        buffer.set_document(Document(text, len(text)))
+        self.capitalizer(buffer)
+        self.assertEqual(u'SELECT', buffer.text)
+
+        text = u'CREATE TABLE "select'
+        buffer.set_document(Document(text, len(text)))
+        self.capitalizer(buffer)
+        self.assertEqual(u'CREATE TABLE "select', buffer.text)
+
+    def test_undo_capitalize(self):
+        buffer = Buffer()
+
+        text = u'Selec'
+        buffer.set_document(Document(text, len(text)))
+        self.capitalizer(buffer)
+        self.assertEqual(u'Selec', buffer.text)
+
+        text = buffer.text + 't'
+        buffer.set_document(Document(text, len(text)))
+        self.capitalizer(buffer)
+        self.assertEqual(u'SELECT', buffer.text)
+
+        text = buffer.text + 'i'
+        buffer.set_document(Document(text, len(text)))
+        self.capitalizer(buffer)
+        self.assertEqual(u'Selecti', buffer.text)
+
+        text = buffer.text + 'on'
+        buffer.set_document(Document(text, len(text)))
+        self.capitalizer(buffer)
+        self.assertEqual(u'Selection', buffer.text)
